Add 1:1 row to communication table

--- a/expectations.qmd
+++ b/expectations.qmd
@@ -30,37 +30,39 @@ In addition to abiding by the SWAMP [Code of Conduct](https://cawaterboarddatace
 
 DRAFT - SWAMP Unit to Review and revise as appropriate
 
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Tool            | When to Use                                                                                                              | Audience                          | Response Time                                                                                                                                                        | Suggested Norms                                                                                                                                 |
-+=================+==========================================================================================================================+===================================+======================================================================================================================================================================+=================================================================================================================================================+
-| Teams Chat      | For short and simple conversations                                                                                       | Internal partners                 | Varies                                                                                                                                                               | Avoid complicated questions or conversations                                                                                                    |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-|                 | Daily check-ins                                                                                                          |                                   | If urgent - note that in message                                                                                                                                     |                                                                                                                                                 |
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Email           | For sending semi-complex content, updates, announcements.                                                                | Internal and/or external partners | Within 3 business days                                                                                                                                               | Use identifiers in subject line                                                                                                                 |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      | for urgency and response                                                                                                                        |
-|                 | When you need a record of communication                                                                                  |                                   | If urgent - note that in message                                                                                                                                     | expectations                                                                                                                                    |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-|                 | Recap of important conversations                                                                                         |                                   |                                                                                                                                                                      | If the email is long (greater than 1 paragraph) - recommend adding a summary with the need/ask bolded at the top of the message.                |
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Meetings        | For detailed, nuanced, complex communications that require feedback and/or discussion                                    | Internal and/or external partners | Schedule in advance                                                                                                                                                  | Make an agenda, share ahead of the meeting, and stick to it.                                                                                    |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-| (Teams)         | When you have specific topics to discuss                                                                                 |                                   | Respect the availability of others and schedule as soon as you know a meeting is needed - for most folks scheduling meetings 2-weeks (or more!) in advance is normal | The agenda can be formal or a few bullets - what's important is that there is a known purpose, priorities, and expected outcome for the meeting |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      | If the meeting is recurring, cancel it if there is no need to meet and follow-up with an email/chat instead.                                    |
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Meetings        | See above                                                                                                                | External partners                 | See above                                                                                                                                                            | Develop a formal agenda - send out at least 1 week prior to the meeting/webinar.                                                                |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-| (Zoom)          | Use Zoom meetings when communicating with external partners                                                              |                                   |                                                                                                                                                                      | See [instructions for scheduling Zoom meetings.](https://cawaterboarddatacenter.github.io/swamp-manual/tech.html#zoom)                          |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-|                 | Use Zoom webinar for large, publicly facing events                                                                       |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-|                 |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-|                 | [Meeting vs webinar comparison](https://support.zoom.us/hc/en-us/articles/115005474943-Meetings-and-webinars-comparison) |                                   |                                                                                                                                                                      |                                                                                                                                                 |
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Co-working      | For brainstorming, screen-sharing, skill building, problem solving                                                       | Internal and/or external partners | Schedule as needed                                                                                                                                                   | Can have a pre-determined agenda or be informally and organically developed during the co-working session                                       |
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Phone Call      | For time-sensitive, urgent communication                                                                                 | Internal and/or external partners | Respond to missed calls according to urgency, within 3 business days                                                                                                 | If you don't reach the person, leave a voice mail and/or follow-up with email or chat.                                                          |
-+-----------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Tool             | When to Use                                                                                                              | Audience                          | Response Time                                                                                                                                                        | Suggested Norms                                                                                                                                 |
++==================+==========================================================================================================================+===================================+======================================================================================================================================================================+=================================================================================================================================================+
+| Teams Chat       | For short and simple conversations                                                                                       | Internal partners                 | Varies                                                                                                                                                               | Avoid complicated questions or conversations                                                                                                    |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  | Daily check-ins                                                                                                          |                                   | If urgent - note that in message                                                                                                                                     |                                                                                                                                                 |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Email            | For sending semi-complex content, updates, announcements.                                                                | Internal and/or external partners | Within 3 business days                                                                                                                                               | Use identifiers in subject line for urgency and response expectations                                                                           |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  | When you need a record of communication                                                                                  |                                   | If urgent - note that in message                                                                                                                                     | If the email is long (greater than 1 paragraph) - recommend adding a summary with the need/ask bolded at the top of the message.                |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  | Recap of important conversations                                                                                         |                                   |                                                                                                                                                                      |                                                                                                                                                 |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Meetings         | For detailed, nuanced, complex communications that require feedback and/or discussion                                    | Internal and/or external partners | Schedule in advance                                                                                                                                                  | Make an agenda, share ahead of the meeting, and stick to it.                                                                                    |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+| (Teams)          | When you have specific topics to discuss                                                                                 |                                   | Respect the availability of others and schedule as soon as you know a meeting is needed - for most folks scheduling meetings 2-weeks (or more!) in advance is normal | The agenda can be formal or a few bullets - what's important is that there is a known purpose, priorities, and expected outcome for the meeting |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      | If the meeting is recurring, cancel it if there is no need to meet and follow-up with an email/chat instead.                                    |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Meetings         | See above                                                                                                                | External partners                 | See above                                                                                                                                                            | Develop a formal agenda - send out at least 1 week prior to the meeting/webinar.                                                                |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+| (Zoom)           | Use Zoom meetings when communicating with external partners                                                              |                                   |                                                                                                                                                                      | See [instructions for scheduling Zoom meetings.](https://cawaterboarddatacenter.github.io/swamp-manual/tech.html#zoom)                          |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  | Use Zoom webinar for large, publicly facing events                                                                       |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  |                                                                                                                          |                                   |                                                                                                                                                                      |                                                                                                                                                 |
+|                  | [Meeting vs webinar comparison](https://support.zoom.us/hc/en-us/articles/115005474943-Meetings-and-webinars-comparison) |                                   |                                                                                                                                                                      |                                                                                                                                                 |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Check-ins / 1:1s | For regular check-in or update meetings                                                                                  | Internal                          | Meetings tend to be every-other week; but can adjust as needed                                                                                                       | Use a shared document (e.g., OneNote, Asana, Word Docs) to keep track of standard agenda items or topics to discuss at the next meeting.        |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Co-working       | For brainstorming, screen-sharing, skill building, problem solving                                                       | Internal and/or external partners | Schedule as needed                                                                                                                                                   | Can have a pre-determined agenda or be informally and organically developed during the co-working session                                       |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Phone Call       | For time-sensitive, urgent communication                                                                                 | Internal and/or external partners | Respond to missed calls according to urgency, within 3 business days                                                                                                 | If you don't reach the person, leave a voice mail and/or follow-up with email or chat.                                                          |
++------------------+--------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
 
 : Table of communication tools and their respective recommended use and norms for SWAMP communications
 
